[package]
name = "static-queue"
version = "1.0.0"
edition = "2024"
author = "Lion Kortlepel <development@kortlepel.com>"
repository = "https://github.com/lionkor/static-queue"
description = "A no_std, allocation-free, safe Rust queue implemented as a ring buffer with full test coverage."
license = "MIT"

[dependencies]
